HelloUltraviolet/Fixtures/RejectedSource/Expressions/ParsePlaceError/Source/Main.uv
//! Rejected expression specimen for a non-place parsed where a place is required.

public procedure parsePlaceErrorReference() -> i32 {
    return &(1 + 2)
}
